<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfilActivity">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/judul"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/profile_img" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="188dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginLeft="110dp"
        android:padding="10dp"
        android:text="@string/nim"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="216dp"
        android:layout_height="50dp"
        android:layout_below="@id/nim"
        android:layout_gravity="left"
        android:layout_marginLeft="110dp"
        android:padding="10dp"
        android:text="@string/nama"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/kelas"
        android:layout_width="188dp"
        android:layout_height="50dp"
        android:layout_below="@id/nama"
        android:layout_gravity="left"
        android:layout_marginLeft="110dp"
        android:padding="10dp"
        android:text="@string/kelas"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/referensi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/referensi"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/referensi6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/referensi6"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/referensi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/referensi1"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/referensi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/referensi2"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    <TextView
        android:id="@+id/referensi7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/referensi7"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/referensi3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/referensi3"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/referensi4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/referensi4"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/referensi5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/referensi5"
        android:textAppearance="@android:style/TextAppearance.Medium" />
</LinearLayout>
</ScrollView>